--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     }
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "concurrently": "^7.6.0"
   },
   "engines": {
